[gd_scene load_steps=18 format=3 uid="uid://v0v03he00o6k"]

[ext_resource type="Script" path="res://Scripts/Character_Scripts/projectile_dogg.gd" id="1_335rj"]
[ext_resource type="Texture2D" uid="uid://4rmaeegvkbrb" path="res://Artwork/Character_Sprites/Enemy_Sprites/miniGun_Dog.png" id="1_fx1o2"]
[ext_resource type="Texture2D" uid="uid://di576nrho86c6" path="res://Artwork/Character_Sprites/Enemy_Sprites/WatchOut_Proj2.png" id="3_rrotf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bhl20"]
atlas = ExtResource("1_fx1o2")
region = Rect2(0, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_on6t1"]
atlas = ExtResource("3_rrotf")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqb42"]
atlas = ExtResource("3_rrotf")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uwl2q"]
atlas = ExtResource("3_rrotf")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4gayj"]
atlas = ExtResource("3_rrotf")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gygtl"]
atlas = ExtResource("3_rrotf")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7pa2y"]
atlas = ExtResource("3_rrotf")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nawqg"]
atlas = ExtResource("3_rrotf")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m4qvq"]
atlas = ExtResource("3_rrotf")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ork1"]
atlas = ExtResource("3_rrotf")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4m4eb"]
atlas = ExtResource("3_rrotf")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cd2xa"]
atlas = ExtResource("3_rrotf")
region = Rect2(640, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_yhcqb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhl20")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_on6t1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqb42")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uwl2q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4gayj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gygtl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7pa2y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nawqg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m4qvq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ork1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4m4eb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cd2xa")
}],
"loop": false,
"name": &"watch_out",
"speed": 12.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qmovq"]
radius = 7.0

[node name="Projectile_Dogg" type="CharacterBody2D" groups=["Enemies"]]
texture_filter = 1
motion_mode = 1
script = ExtResource("1_335rj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_yhcqb")
animation = &"watch_out"
speed_scale = 1.1

[node name="Area2D_ProjEnemy" type="Area2D" parent="."]

[node name="Left_ForBody_Collision" type="CollisionPolygon2D" parent="Area2D_ProjEnemy"]
position = Vector2(2, 0)
scale = Vector2(1.16166, 1.14882)
polygon = PackedVector2Array(-20, -3, -24, -8, -24, -18, -21, -24, -21, -31, -11, -36, -8, -32, 4, -32, 3, -35, 15, -34, 15, -23, 18, -17, 18, -7, 21, -2, 22, 17, 16, 26, -18, 25, -21, 12, -22, 2)
disabled = true

[node name="Right_ForBody_Collision" type="CollisionPolygon2D" parent="Area2D_ProjEnemy"]
position = Vector2(2.38419e-07, 2)
scale = Vector2(1.15239, 1.14102)
polygon = PackedVector2Array(-17, 24, 14, 24, 20, 17, 18, 5, 16, -3, 22, -5, 24, -9, 24, -18, 21, -23, 21, -31, 13, -36, 9, -36, 8, -33, -2, -33, -6, -36, -15, -34, -15, -26, -17, -18, -17, -14, -21, -7, -22, -3, -22, 13, -22, 19)
disabled = true

[node name="LeftMarker" type="Marker2D" parent="."]
position = Vector2(-36, 19)

[node name="RightMarker" type="Marker2D" parent="."]
position = Vector2(35, 18)

[node name="ProjEnemy_Timer" type="Timer" parent="."]

[node name="smallCIrcle_collision" type="CollisionShape2D" parent="."]
position = Vector2(1, 14)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_qmovq")
disabled = true

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="Area2D_ProjEnemy" to="." method="_on_area_2d_proj_enemy_body_entered"]
[connection signal="timeout" from="ProjEnemy_Timer" to="." method="_on_proj_enemy_timer_timeout"]
